[tool.poetry]
name = "aussie-bean-tools"
version = "0.1.0"
description = "Beancounter tools for importing bank transactions."
authors = ["John Mee <aussie-bean-tools@johnmee.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
fuzzywuzzy = "^0.18.0"
click = "^8.1.7"
beancount = "^2.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
upbank = 'aussie_bean_tools.upbank_client:cli'
fuzzer = 'aussie_bean_tools.fuzzer:fuzzer'
