[project]
name = "aussie-bean-tools"
version = "0.2.0"
description = "Beancounter tools for importing bank transactions."
readme = "README.md"
requires-python = "~=3.10.17"
dependencies = [
    "beancount==2.3.6",
    "click>=8.1.8",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.1",
]

[project.scripts]
upbank = "aussie_bean_tools.upbank_client:cli"
fuzzer = "aussie_bean_tools.fuzzer:cli"

[tool.uv]
package = true
